# spider-aggregation

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml
migrations/: env.py
scripts/: init_db.py  migrate_feed_settings.py  migrate_phase2.py  seed_feeds.py  seed_filter_rules.py
src/spider_aggregation/: __init__.py  config.py  logger.py
src/spider_aggregation/core/: __init__.py  content_fetcher.py  factories.py  fetcher.py  filter_engine.py  keyword_extractor.py  parser.py  scheduler.py  services.py  summarizer.py
src/spider_aggregation/core/services/: __init__.py  content_service.py  deduplicator_service.py  fetcher_service.py  filter_service.py  keyword_service.py  parser_service.py  scheduler_service.py  summarizer_service.py
src/spider_aggregation/models/: __init__.py  entry.py  feed.py
src/spider_aggregation/storage/: __init__.py  database.py  mixins.py
src/spider_aggregation/storage/dialects/: __init__.py  base.py  mysql.py  postgresql.py  sqlite.py
src/spider_aggregation/storage/repositories/: __init__.py  category_repo.py  entry_repo.py  feed_repo.py  filter_rule_repo.py
src/spider_aggregation/utils/: __init__.py
src/spider_aggregation/web/: app.py  scheduler_manager.py  serializers.py
src/spider_aggregation/web/blueprints/: base.py  categories.py  entries.py  feeds.py  filter_rules.py  scheduler.py
src/spider_aggregation/web/static/css/: style.css
src/spider_aggregation/web/static/js/: api.js  app.js  dashboard.js  forms.js  table.js
src/spider_aggregation/web/templates/: entry.html  filter_rules.html  index.html  settings.html
tests/: __init__.py
tests/integration/: test_real_feeds.py
tests/unit/: test_content_fetcher.py  test_database.py  test_deduplicator.py  test_dialects.py  test_entry_repo_category.py  test_feed_repo_category.py  test_fetcher.py  test_filter_engine.py  test_logger.py  test_parser.py  test_scheduler.py
