[project]
name = "mind-weaver"
version = "0.3.0"
description = "Personal knowledge/research dynamic monitoring tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.10",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "beautifulsoup4>=4.14.3",
    # Phase 2 dependencies
    "trafilatura>=1.6.0",
    "readability-lxml>=0.8.1",
    "jieba>=0.42.1",
    "nltk>=3.8.1",
    "flask>=3.0.0",
    "alembic>=1.18.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]
ai = [
    "zhipuai>=2.0.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
mysql = [
    "pymysql>=1.1.0",
]
all-dbs = [
    "mind-weaver[postgresql,mysql]",
]

[project.scripts]
mind-weaver = "spider_aggregation.web.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spider_aggregation"]

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/spider_aggregation --cov-report=term-missing"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
